Figured out the issue but not able to find solution